force-app/main/default/objects/PDRI__Deployment__c/PDRI__Deployment__c.object-meta.xml
<CustomObject>
    <label>Deployment</label>
    <nameField>
        <displayFormat>D-{00000000}</displayFormat>
        <label>Deployment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>