force-app/main/default/objects/PDRI__Deployment__c/fields/PDRI__CSV_Upload_File_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__CSV_Upload_File_Name__c</fullName>
    <label>CSV Upload File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>