force-app/main/default/objects/PDRI__Deployment__c/fields/PDRI__Deployment_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Name__c</fullName>
    <label>Deployment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>