force-app/main/default/objects/PDRI__Deployment__c/fields/PDRI__Deployment_Notes__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Notes__c</fullName>
    <label>Deployment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>