force-app/main/default/objects/PDRI__Deployment__c/fields/PDRI__Destination_Connection__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Destination_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Connection</label>
    <referenceTo>PDRI__Connection__c</referenceTo>
    <relationshipLabel>Deployments (Destination Connection)</relationshipLabel>
    <relationshipName>Deployments1</relationshipName>
    <type>Lookup</type>
</CustomField>