force-app/main/default/objects/PDRI__Deployment__c/fields/PDRI__Destination_Managed_Instance_ID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Destination_Managed_Instance_ID__c</fullName>
    <label>Destination Managed Instance ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>