force-app/main/default/objects/PDRI__Deployment__c/fields/PDRI__Job_ID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Job_ID__c</fullName>
    <description>Prodly&apos;s Job ID associated with the Deployment.</description>
    <label>Job ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>