force-app/main/default/objects/PDRI__Deployment__c/fields/PDRI__Record_Selections_ID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Record_Selections_ID__c</fullName>
    <label>Record Selections ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>