force-app/main/default/objects/PDRI__Deployment__c/fields/PDRI__Release_Result__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Release_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Result</label>
    <referenceTo>PDRI__Release_Result__c</referenceTo>
    <relationshipLabel>Deployments</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>