force-app/main/default/objects/PDRI__Deployment__c/fields/PDRI__Skip_Inserts__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Skip_Inserts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Inserts</label>
    <type>Checkbox</type>
</CustomField>