force-app/main/default/objects/PDRI__Deployment__c/fields/PDRI__Source__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Source__c</fullName>
    <description>Source of the Deployment.</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>