force-app/main/default/objects/PDRI__Deployment__c/fields/PDRI__Source_Connection__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Source_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Connection</label>
    <referenceTo>PDRI__Connection__c</referenceTo>
    <relationshipLabel>Deployments</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>