force-app/main/default/objects/PDRI__Deployment__c/fields/PDRI__Source_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Source_Name__c</fullName>
    <description>Source Name of the Deployment</description>
    <label>Source Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>