force-app/main/default/objects/PDRI__Deployment__c/fields/PDRI__Target_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Target_Name__c</fullName>
    <description>Target Name of the Deployment.</description>
    <label>Target Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>