force-app/main/default/objects/PDRI__Deployment__c/fields/PDRI__Target_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Target_Type__c</fullName>
    <description>Target Type of the Deployment.</description>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
            </value>
            <value>
                <fullName>GitHub Cloud</fullName>
            </value>
            <value>
                <fullName>Azure Cloud</fullName>
            </value>
            <value>
                <fullName>Bitbucket Cloud</fullName>
            </value>
            <value>
                <fullName>GitHub Enterprise Server</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>